@@ -1,4 +1,4 @@
-.\" $Id: munge.1.in,v 1.3 2004/11/18 19:55:44 dun Exp $
+.\" $Id: munge.1.in,v 1.4 2004/11/24 20:56:36 dun Exp $
 
 .TH MUNGE 1 "@DATE@" "@PACKAGE@-@VERSION@" "Munge Uid 'N' Gid Emporium"
 
@@ -73,7 +73,8 @@ credential decode, as well as each supplementary group of which the effective
 user ID of that process is a member.
 .TP
 .BI "-t, --ttl " integer
-Specify the time-to-live (in seconds).  A value of 0 selects the default ttl.
+Specify the time-to-live (in seconds).  This controls how long the credential
+is valid once it has been encoded.  A value of 0 selects the default ttl.
 A value of -1 selects the maximum allowed ttl.
 .TP
 .BI "-S, --socket " string
